made a lot of changes to fix assignments sometimes not showing on days. Also centered dots on the calendar. Added filter to filter out "Available" events.

--- a/flask_application/static/calendar.css
+++ b/flask_application/static/calendar.css
@@ -109,8 +109,7 @@
 
 .event-dot {
   font-size: 10px;
-  position: absolute;
-  bottom: 2px;
+  position: static;
   line-height: 1;
 }
 
